--- a/back/package.json
+++ b/back/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon --exec babel-node src/index.js",
     "build": "babel src -d dist",
     "start": "node dist/index.js",
-    "both-dev": "concurrently \"npm run dev\" \"npm --prefix ../front/ run dev\""
+    "both-dev": "concurrently \"npm run dev\" \"npm --prefix ../front/ run dev\"",
+    "vercel-build": "echo Hello"
 },
   "author": "",
   "license": "ISC",
